syntax="proto3";

package usersService;
option go_package = "/usersService";

import "google/protobuf/timestamp.proto";

message RegistrationRequest {
  int64 idAccount = 1;
}

message RegistrationResponse {
  bool successfully = 1;
  string message = 2;
  int64 httpStatus = 3;
}

message GetUserRequest {
  int64 idAccount = 1;
}

message GetUserResponse {
  string name = 1;
  string surname = 2;
  string patronymic = 3;
  int64 gender = 4;
  google.protobuf.Timestamp dateBorn = 5;
  string linkImage = 6;
}

service UsersService {
  rpc Registration (RegistrationRequest) returns (RegistrationResponse) {}
}